--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ Thumbs.db
 # (so that the directory is non-empty and can be in git)
 /src/extensions/dev/*
 !/src/extensions/dev/README
+!/src/extensions/dev/hello-extension/
 
 /src/extensions/disabled
 
